manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delixir
spec:
  replicas: 4
  selector:
    matchLabels:
      app: delixir
  template:
    metadata:
      labels:
        app: delixir
    spec:
      containers:
      - name: delixir
        image: mrmicahcooper/delixir:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 4000
