manifests/node-service.yml
apiVersion: v1
kind: Service
metadata:
  name: delixir-nodes
  namespace: default
spec:
  clusterIP: None
  selector:
    app: delixir
