manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: delixir
  namespace: default
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 4000
  selector:
    app: delixir
