manifests/delixir.yml
---
apiVersion: v1
kind: Service
metadata:
  name: delixir
spec:
  selector:
    app: delixir
  ports: 
  - protocol: TCP
    port: 80
    targetPort: 4000
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delixir
spec:
  replicas: 4
  selector:
    matchLabels:
      app: delixir
  template:
    metadata:
      labels:
        app: delixir
    spec:
      containers:
      - name: delixir
        image: mrmicahcooper/delixir
        imagePullPolicy: Always
        ports:
        - containerPort: 4000
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: delixir
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: delixir.clank.us
    http:
      paths:
      - backend:
          serviceName: delixir
          servicePort: 80
  - host: delixir.clank.us
    http:
      paths:
      - backend:
          serviceName: delixir
          servicePort: 80
