manifests/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: delixir
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: delixir.clank.us
    http:
      paths:
      - backend:
          serviceName: delixir
          servicePort: 80
  - host: foo.clank.us
    http:
      paths:
      - backend:
          serviceName: delixir
          servicePort: 80
